--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@
 GENERAL
 **************************************************/
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 main {
   margin: 0;
   padding: 0;
@@ -15,6 +20,7 @@ NAVIGATION MENU
 
 nav {
   width: 100%;
+  height: 78px;
   margin: 0 auto;
   background: linear-gradient(#466995, #FFF);
   border-bottom: 2px solid #466995;
@@ -22,25 +28,38 @@ nav {
   z-index: 1000;
 }
 
+#headshot img {
+  float: left;
+  border: 1px solid #466995;
+  margin: 8px 10px 4px;
+  height: 140px;
+  position: fixed;
+  border-radius: 100%;
+}
+
 nav ul {
   padding: 10px;
   text-align: right;
+  margin: 0;
 }
 
 nav li {
   display: inline-block;
-  padding: 0 20px;
+  padding: 0 30px;
   font-family: "Oswald";
+  font-size: 2.3em;
 }
 
 nav li a {
   color: #FFF;
   text-decoration: none;
   text-transform: uppercase;
+  transition-duration: 700ms;
 }
 
 nav li a:hover {
   color: #466995;
+  transition-duration: 700ms;
 }
 
 
@@ -52,33 +71,56 @@ ABOUT
 .about {
   margin: 0 auto;
   padding: 100px;
-  height: 500px;
+  min-height: 100vh;
+  box-sizing: border-box;
   display: block;
   background-color: #466995;
+  background-image: url('../img/dallas_backdrop.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   text-align: center;
   color: #FFF;
   font-family: "Oswald";
 }
 
-.about p {
-  padding: 10px;
-  border-bottom: 1px solid #FFF;
+.about h1 {
+  font-size: 4em;
+  letter-spacing: 0.2em;
+  text-shadow: 2px 2px 4px black;
 }
 
-.about a {
-  display: inline-block;
-  margin: 10px;
-  padding: 15px;
-  background-color: #FFF;
+.about p {
+  font-size: 1.6em;
+  padding: 10px;
+  letter-spacing: 2px;
+  text-shadow: 1px 1px 2px black;
+}
+
+#social {
+  display: flex;
+  justify-content: center;
+  margin-top: 300px;
+}
+
+#social a {
+  width: 60px;
+  margin: 20px;
+  padding: 5px;
+  background-color: #fff;
   color: #466995;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
   border-radius: 10px;
   text-decoration: none;
+  box-shadow: 2px 2px 4px black;
+  transition-duration: 700ms;
 }
 
-.about a:hover {
+#social a:hover {
   background-color: #466995;
   color: #fff;
+  transition-duration: 700ms;
+  transform: scale(1.3);
 }
 
 
@@ -88,24 +130,75 @@ PORTFOLIO
 **************************************************/
 
 .portfolio {
-  height: 600px;
+  min-height: 100vh;
+  box-sizing: border-box;
   text-align: center;
   font-family: "Oswald";
   color: #466995;
-  padding-top: 100px;
 }
 
-.porfolio ul {
-    width: 100%;
+.portfolio h1 {
+  font-size: 3.5em;
+  text-shadow: 1px 1px 2px black;
+  letter-spacing: 2px;
 }
 
-.portfolio li {
+.portfolio ul {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.portfolio a {
   list-style: none;
-  float: left;
-  width: 25%;
-  margin: 10px 2%;
-  padding: 20px;
-  border: 1px solid red;
+  flex-basis: 30%;
+  margin: 10px 1.5%;
+}
+
+.portfolio p {
+  font-size: 1.6em;
+  letter-spacing: 2px;
+}
+
+#project1 {
+  background-image: url('../img/bent-creek-ceramics.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 250px;
+}
+
+#project2 {
+  background-image: url('../img/theCalc.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 250px;
+}
+
+#project3 {
+  background-image: url('../img/mysteryWord.png');
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 250px;
+}
+
+#skills {
+  display: flex;
+  justify-content: space-around;
+  width: 720px;
+  margin: 120px auto 0;
+}
+
+#skills img {
+  width: 125px;
+  height: 125px;
+}
+
+#skills img:hover {
+  transform: rotate(360deg);
+  transition-duration: 700ms;
 }
 
 
