--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,7 +74,7 @@ ABOUT
 .about {
   margin: 0 auto;
   padding: 100px;
-  height: 100vh;
+  min-height: 100vh;
   box-sizing: border-box;
   display: block;
   background-color: #466995;
@@ -158,7 +158,7 @@ PORTFOLIO
 **************************************************/
 
 .portfolio {
-  height: 100vh;
+  min-height: 100vh;
   /*background-image: url('../img/brickBG.jpg');
   background-position: center;
   background-size: cover;
@@ -187,11 +187,24 @@ PORTFOLIO
   list-style: none;
   flex-basis: 30%;
   margin: 10px 1.5%;
+  text-decoration: none;
 }
 
 .portfolio p {
   font-size: 1.6em;
   letter-spacing: 2px;
+}
+
+.portfolio li {
+  background-color: rgba(0, 0, 0, 0);
+  transition: .7s;
+  height: 100%;
+  color: rgba(255, 255, 255, 0);
+}
+
+.portfolio li:hover {
+  background-color: rgba(0, 0, 0, .6);
+  color: rgba(255, 255, 255, 1);
 }
 
 #project1 {
@@ -205,7 +218,7 @@ PORTFOLIO
 #project2 {
   background-image: url('../img/theCalc.png');
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   height: 250px;
 }
@@ -218,6 +231,13 @@ PORTFOLIO
   height: 250px;
 }
 
+#project4 {
+  background-image: url('../img/nasa-api.png');
+  background-position: center;
+  background-size: cover;
+  height: 250px;
+}
+
 #skills {
   display: flex;
   justify-content: space-around;
@@ -225,14 +245,19 @@ PORTFOLIO
   margin: 120px auto 0;
 }
 
-#skills img {
+.skills img {
   width: 125px;
   height: 125px;
 }
 
-#skills img:hover {
+.skills img:hover {
   transform: rotate(360deg);
   transition-duration: 700ms;
+}
+
+#code {
+  width: 150px;
+  margin-right: 15px;
 }
 
 
@@ -242,7 +267,7 @@ CONTACT
 **************************************************/
 
 .contact {
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Oswald";
   color: #fff;
   background-color: #466995;
@@ -316,10 +341,4 @@ footer a {
 
 #footericon {
   color: #333;
-}
-
-@media (max-width: 600px) {
-  .about p {
-    font-size: 2.6em;
-  }
 }
